# AutoAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SUGGESTIONS.md  conftest.py  docker-compose.yml  mock_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md  数据库设计.md  配置管理.md  项目概述.md
.qoder/repowiki/zh/content/API模块详解/: API模块详解.md  商品管理API.md  支付处理API.md  用户管理API.md  订单处理API.md
.qoder/repowiki/zh/content/工具层详解/: 上下文管理.md  令牌管理.md  工具层详解.md  断言工具.md  请求封装工具.md
.qoder/repowiki/zh/content/扩展开发指南/: Mock服务扩展.md  扩展开发指南.md  新增API模块.md  框架定制与二次开发.md  自定义工具类开发.md
.qoder/repowiki/zh/content/核心架构/: 数据流分析.md  架构总览.md  核心架构.md  组件交互机制.md  设计模式应用.md
.qoder/repowiki/zh/content/测试执行引擎/: YAML数据驱动测试.md  代码编排测试.md  测试执行引擎.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
SKILL/: SKILL.md  anti-patterns.md  case-authoring.md  example.md  project-optimization.md  reference.md
api/: base_api.py  order_api.py  pay_api.py  product_api.py  user_api.py
common/: api_factory.py  assert_util.py  auth.py  context.py  db_assert.py  db_init.py  db_util.py  extract_util.py  factory.py  logger.py  replace_util.py  request_util.py  runner.py  schema_util.py  soft_assert.py  token_manager.py  yaml_util.py
config/: config.yaml  config_util.py
config/schemas/: login.json  order_create.json  pay.json
data/: flow.yaml
docs/: 项目说明与用例编写指南.md
mocks/: __init__.py  server.py
mocks/routes/: orders.py  pay.py  products.py  users.py
prompt/: overview.md  prompt.md
testcase/: test_flow.py  test_oversell.py
